--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -23,8 +25,17 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.57",
+    "@storybook/addon-interactions": "^7.0.0-beta.57",
+    "@storybook/addon-links": "^7.0.0-beta.57",
+    "@storybook/blocks": "^7.0.0-alpha.8",
+    "@storybook/nextjs": "^7.0.0-beta.57",
+    "@storybook/react": "^7.0.0-beta.57",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "autoprefixer": "^10.4.13",
+    "eslint-plugin-storybook": "^0.6.11",
     "postcss": "^8.4.21",
+    "storybook": "^7.0.0-beta.57",
     "tailwindcss": "^3.2.7"
   }
 }
