--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -21,6 +22,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
