--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@svgr/webpack": "^6.5.1",
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
